# wxcam-timelapse

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  repository.yaml
.claude/: launch.json
addon/: DOCS.md  Dockerfile  README.md  build.yaml  config.yaml  run.sh
config/: cameras.csv  settings.toml
docs/: plan.md
timelapse/: __init__.py  api.py  capture.py  config.py  overlay.py  rollup.py  scheduler.py  store.py
web/: README.md  index.html  styles.css  viewer.js
